--- a/logistic_SCAD_MCP_np_MODULE-SNP_parallel.ipynb
+++ b/logistic_SCAD_MCP_np_MODULE-SNP_parallel.ipynb
@@ -233,18 +233,7 @@
     "#     y_temp = y.copy()\n",
     "#     y_temp -= np.mean(y)\n",
     "#     y_temp /= np.std(y)\n",
-    "    p = len(list(bed.sid))\n",
-    "    gene_iid = np.array(list(bed.iid))\n",
-    "    _y = y[np.intersect1d(outcome_iid, gene_iid, assume_unique=True, return_indices=True)[1]]\n",
-    "    gene_ind = np.intersect1d(gene_iid, outcome_iid, assume_unique=True, return_indices=True)[1]\n",
-    "    _ = np.zeros(p)\n",
-    "    for j in SNP_ind:\n",
-    "        _X = bed.read(np.s_[:,j], dtype=np.int8).flatten()\n",
-    "        _X = _X[gene_ind] # get gene iid also in outcome iid\n",
-    "        _[j] = _X@_y\n",
-    "\n",
-    "    grad_at_0 = _[1:]/N\n",
-    "    lambda_max = np.linalg.norm(grad_at_0, ord=np.infty)\n",
+    "    grad_at_0 = _SNP_update_smooth_grad_convex_LM(N=N, SNP_ind=SNP_ind, bed=bed, beta_md=np.zeros(len(SNP_ind)), y=y, outcome_iid=outcome_iid)\n",
     "    return lambda_max\n",
     "\n",
     "\n",
@@ -261,9 +250,11 @@
     "    N = len(np.intersect1d(outcome_iid, gene_iid, assume_unique=True, return_indices=True)[1])\n",
     "    if np.all(beta_0==np.ones(1)):\n",
     "        _ = np.zeros(p)\n",
-    "        for j in SNP_ind:\n",
+    "        _y = y[np.intersect1d(outcome_iid, gene_iid, assume_unique=True, return_indices=True)[1]]\n",
+    "        for j in np.arange(p):\n",
     "            _X = bed.read(np.s_[:,j], dtype=np.int8).flatten()\n",
     "            _X = _X[gene_ind] # get gene iid also in outcome iid\n",
+    "            _[j] = _X@y\n",
     "        beta = np.sign(_)\n",
     "    else:\n",
     "        beta = beta_0\n",
