--- a/LM_SCAD_MCP_np_MODULE-SNP_parallel.ipynb
+++ b/LM_SCAD_MCP_np_MODULE-SNP_parallel.ipynb
@@ -43,6 +43,8 @@
     "# import itertools\n",
     "from numba import jit, njit\n",
     "from bed_reader import open_bed\n",
+    "import multiprocess as mp\n",
+    "\n",
     "# import warnings\n",
     "# warnings.filterwarnings('ignore') # this is just to hide all the warnings\n",
     "# import rpy2.robjects as robjects\n",
@@ -420,15 +422,15 @@
     "SNP_ind = np.arange(300)\n",
     "\n",
     "print(SNP_solution_path_LM_parallel(bed_file=bed_file, \n",
-    "                    bim_file=bim_file, \n",
-    "                    fam_file=fam_file, \n",
-    "                    outcome=outcome, \n",
-    "                    outcome_iid=outcome_iid, \n",
-    "                    lambda_=np.linspace(.005,.5,60)[::-1],\n",
-    "                    SNP_ind=SNP_ind, \n",
-    "                    L_convex=1e3, \n",
-    "                    beta_0 = np.ones(1),\n",
-    "                    tol=1e-2, maxit=500, penalty=\"SCAD\", a=3.7, gamma=2.))\n",
+    "                                    bim_file=bim_file, \n",
+    "                                    fam_file=fam_file, \n",
+    "                                    outcome=outcome, \n",
+    "                                    outcome_iid=outcome_iid, \n",
+    "                                    lambda_=np.linspace(.005,.5,60)[::-1],\n",
+    "                                    SNP_ind=SNP_ind, \n",
+    "                                    L_convex=1e3, \n",
+    "                                    beta_0 = np.ones(1),\n",
+    "                                    tol=1e-2, maxit=500, penalty=\"SCAD\", a=3.7, gamma=2.))\n",
     "\n",
     "\n"
    ]
