--- a/logistic_SCAD_MCP_np_MODULE-SNP_parallel.ipynb
+++ b/logistic_SCAD_MCP_np_MODULE-SNP_parallel.ipynb
@@ -32,6 +32,8 @@
     "# import itertools\n",
     "from numba import jit, njit\n",
     "from bed_reader import open_bed\n",
+    "import multiprocess as mp\n",
+    "\n",
     "# import warnings\n",
     "# warnings.filterwarnings('ignore') # this is just to hide all the warnings\n",
     "# import rpy2.robjects as robjects\n",
@@ -172,17 +174,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2022-07-18T17:45:19.721864Z",
-     "start_time": "2022-07-18T17:45:19.691140Z"
-    }
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# @jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
-    "def _SNP_update_smooth_grad_convex_logistic(N, SNP_ind, bed, beta_md, y, outcome_iid):\n",
+    "def _SNP_update_smooth_grad_convex_logistic_parallel(N, SNP_ind, bed, beta_md, y, outcome_iid, chunck_size):\n",
     "    '''\n",
     "    Update the gradient of the smooth convex objective component.\n",
     "    '''\n",
@@ -190,39 +187,62 @@
     "    gene_iid = np.array(list(bed.iid))\n",
     "    _y = y[np.intersect1d(outcome_iid, gene_iid, assume_unique=True, return_indices=True)[1]]\n",
     "    gene_ind = np.intersect1d(gene_iid, outcome_iid, assume_unique=True, return_indices=True)[1]\n",
-    "    # first calcualte _=X@beta_md-_y\n",
-    "    _ = np.zeros(N)\n",
-    "    for j in SNP_ind:\n",
-    "        _X = bed.read(np.s_[:,j], dtype=np.int8).flatten()\n",
-    "        _X = _X[gene_ind] # get gene iid also in outcome iid\n",
-    "        _ += _X*beta_md[j]\n",
+    "    # first calcualte _=X@beta_md-y\n",
+    "    def __parallel_plus(_ind):\n",
+    "        import numpy as np\n",
+    "        __ = np.zeros(N)\n",
+    "        for j in _ind:\n",
+    "            _X = bed.read(np.s_[:,j], dtype=np.int8).flatten()\n",
+    "            _X = _X[gene_ind] # get gene iid also in outcome iid\n",
+    "            __ += _X*beta_md[j]\n",
+    "        return __\n",
+    "    # multiprocessing starts here\n",
+    "    n_slices = np.ceil(len(SNP_ind)/chunck_size)\n",
+    "    with mp.Pool(mp.cpu_count()) as pl:\n",
+    "        _ = pl.map(__parallel_plus, np.array_split(SNP_ind, n_slices))\n",
+    "    _ = np.array(_).sum(0)\n",
     "    _ = np.tanh(_/2.)/2.-_y+.5\n",
-    "    # then calculate output\n",
+    "    # then calculate _XTXbeta = X.T@X@beta_md = X.T@_\n",
+    "    def __parallel_assign(_ind):\n",
+    "        import numpy as np\n",
+    "        k=0\n",
+    "        __ = np.zeros(len(_ind))\n",
+    "        for j in _ind:\n",
+    "            _X = bed.read(np.s_[:,j], dtype=np.int8).flatten()\n",
+    "            _X = _X[gene_ind] # get gene iid also in outcome iid\n",
+    "            __[k] = _X@_\n",
+    "            k += 1\n",
+    "        return __\n",
+    "    # multiprocessing starts here\n",
+    "    n_slices = np.ceil(len(SNP_ind)/chunck_size)\n",
+    "    with mp.Pool(mp.cpu_count()) as pl:\n",
+    "        _XTXbeta = pl.map(__parallel_assign, np.array_split(SNP_ind, n_slices))\n",
+    "    __XTXbeta = np.hstack(_XTXbeta)\n",
     "    _XTXbeta = np.zeros(p)\n",
-    "    for j in SNP_ind:\n",
-    "        _X = bed.read(np.s_[:,j], dtype=np.int8).flatten()\n",
-    "        _X = _X[gene_ind] # get gene iid also in outcome iid\n",
-    "        _XTXbeta[j] = _X@_\n",
+    "    _XTXbeta[SNP_ind] = __XTXbeta\n",
+    "    \n",
     "    del _\n",
-    "    return _XTXbeta/(2.*N)\n",
+    "    del __XTXbeta\n",
+    "\n",
+    "    return 1/N*_XTXbeta\n",
     "\n",
     "# @jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
-    "def _SNP_update_smooth_grad_SCAD_logistic(N, SNP_ind, bed, beta_md, y, outcome_iid, _lambda, a):\n",
+    "def _SNP_update_smooth_grad_SCAD_logistic_parallel(N, SNP_ind, bed, beta_md, y, outcome_iid, _lambda, a, chunck_size):\n",
     "    '''\n",
     "    Update the gradient of the smooth objective component for SCAD penalty.\n",
     "    '''\n",
-    "    return _SNP_update_smooth_grad_convex_logistic(N=N, SNP_ind=SNP_ind, bed=bed, beta_md=beta_md, y=y, outcome_iid=outcome_iid) + SCAD_concave_grad(x=beta_md, lambda_=_lambda, a=a)\n",
+    "    return _SNP_update_smooth_grad_convex_logistic_parallel(N=N, SNP_ind=SNP_ind, bed=bed, beta_md=beta_md, y=y, outcome_iid=outcome_iid, chunck_size=chunck_size) + SCAD_concave_grad(x=beta_md, lambda_=_lambda, a=a)\n",
     "\n",
     "# @jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
-    "def _SNP_update_smooth_grad_MCP_logistic(N, SNP_ind, bed, beta_md, y, outcome_iid, _lambda, gamma):\n",
+    "def _SNP_update_smooth_grad_MCP_logistic_parallel(N, SNP_ind, bed, beta_md, y, outcome_iid, _lambda, gamma, chunck_size):\n",
     "    '''\n",
     "    Update the gradient of the smooth objective component for MCP penalty.\n",
     "    '''\n",
-    "    return _SNP_update_smooth_grad_convex_logistic(N=N, SNP_ind=SNP_ind, bed=bed, beta_md=beta_md, y=y, outcome_iid=outcome_iid) + MCP_concave_grad(x=beta_md, lambda_=_lambda, gamma=gamma)\n",
+    "    return _SNP_update_smooth_grad_convex_logistic_parallel(N=N, SNP_ind=SNP_ind, bed=bed, beta_md=beta_md, y=y, outcome_iid=outcome_iid, chunck_size=chunck_size) + MCP_concave_grad(x=beta_md, lambda_=_lambda, gamma=gamma)\n",
     "\n",
     "\n",
     "# @jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
-    "def _SNP_lambda_max_logistic(bed, y, outcome_iid, N, SNP_ind):\n",
+    "def _SNP_lambda_max_logistic_parallel(bed, y, outcome_iid, N, SNP_ind, chunck_size):\n",
     "    \"\"\"\n",
     "    Calculate the lambda_max, i.e., the minimum lambda to nullify all penalized betas.\n",
     "    \"\"\"\n",
@@ -233,13 +253,13 @@
     "#     y_temp = y.copy()\n",
     "#     y_temp -= np.mean(y)\n",
     "#     y_temp /= np.std(y)\n",
-    "    grad_at_0 = _SNP_update_smooth_grad_convex_LM(N=N, SNP_ind=SNP_ind, bed=bed, beta_md=np.zeros(len(SNP_ind)), y=y, outcome_iid=outcome_iid)\n",
+    "    grad_at_0 = _SNP_update_smooth_grad_convex_logistic_parallel(N=N, SNP_ind=SNP_ind, bed=bed, beta_md=np.zeros(len(SNP_ind)), y=y, outcome_iid=outcome_iid, chunck_size=chunck_size)\n",
     "    return lambda_max\n",
     "\n",
     "\n",
     "\n",
     "# @jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
-    "def SNP_UAG_logistic_SCAD_MCP(bed_file, bim_file, fam_file, outcome, outcome_iid, SNP_ind, L_convex, beta_0 = np.ones(1), tol=1e-2, maxit=500, _lambda=.5, penalty=\"SCAD\", a=3.7, gamma=2.):\n",
+    "def SNP_UAG_logistic_SCAD_MCP_parallel(bed_file, bim_file, fam_file, outcome, outcome_iid, SNP_ind, L_convex, beta_0 = np.ones(1), tol=1e-2, maxit=500, _lambda=.5, penalty=\"SCAD\", a=3.7, gamma=2., chunck_size=50000):\n",
     "    '''\n",
     "    Carry out the optimization for penalized logistic for a fixed lambda.\n",
     "    '''\n",
@@ -248,14 +268,25 @@
     "    p = len(list(bed.sid))\n",
     "    gene_iid = np.array(list(bed.iid))\n",
     "    N = len(np.intersect1d(outcome_iid, gene_iid, assume_unique=True, return_indices=True)[1])\n",
-    "    if np.all(beta_0==np.ones(1)):\n",
-    "        _ = np.zeros(p)\n",
+    "    if np.all(beta_0==np.ones(1)):        \n",
+    "        def __parallel_assign(_ind):\n",
+    "            import numpy as np\n",
+    "            k=0\n",
+    "            __ = np.zeros(len(_ind))\n",
+    "            for j in _ind:\n",
+    "                _X = bed.read(np.s_[:,j], dtype=np.int8).flatten()\n",
+    "                _X = _X[gene_ind] # get gene iid also in outcome iid\n",
+    "                __[k] = _X@y\n",
+    "                k += 1\n",
+    "            return __\n",
+    "        # multiprocessing starts here\n",
     "        _y = y[np.intersect1d(outcome_iid, gene_iid, assume_unique=True, return_indices=True)[1]]\n",
-    "        for j in np.arange(p):\n",
-    "            _X = bed.read(np.s_[:,j], dtype=np.int8).flatten()\n",
-    "            _X = _X[gene_ind] # get gene iid also in outcome iid\n",
-    "            _[j] = _X@y\n",
-    "        beta = np.sign(_)\n",
+    "        n_slices = np.ceil(len(SNP_ind)/chunck_size)\n",
+    "        with mp.Pool(mp.cpu_count()) as pl:\n",
+    "            _XTy = pl.map(__parallel_assign, np.array_split(SNP_ind, n_slices))\n",
+    "        _XTy = np.hstack(_XTy)\n",
+    "        beta = np.zeros(p)\n",
+    "        beta[SNP_ind] = np.sign(_XTy)\n",
     "    else:\n",
     "        beta = beta_0\n",
     "    # passing other parameters\n",
@@ -286,7 +317,7 @@
     "            old_speed_norm = speed_norm # restarting\n",
     "            speed_norm = np.linalg.norm(beta_md - beta_md_old, ord=2) # restarting\n",
     "            converged = (np.linalg.norm(beta_md - beta_md_old, ord=np.infty) < tol)\n",
-    "            smooth_grad = _SNP_update_smooth_grad_SCAD_logistic(N=N, SNP_ind=SNP_ind, bed=bed, beta_md=beta_md, y=y, outcome_iid=outcome_iid, _lambda=_lambda, a=a)\n",
+    "            smooth_grad = _SNP_update_smooth_grad_SCAD_logistic_parallel(N=N, SNP_ind=SNP_ind, bed=bed, beta_md=beta_md, y=y, outcome_iid=outcome_iid, _lambda=_lambda, a=a, chunck_size=chunck_size)\n",
     "            beta = soft_thresholding(x=beta - opt_lambda*smooth_grad, lambda_=opt_lambda*_lambda)\n",
     "            beta_ag = soft_thresholding(x=beta_md - opt_beta*smooth_grad, lambda_=opt_beta*_lambda)\n",
     "#             converged = np.all(np.max(np.abs(beta_md - beta_ag)/opt_beta) < tol).item()\n",
@@ -308,7 +339,7 @@
     "            old_speed_norm = speed_norm # restarting\n",
     "            speed_norm = np.linalg.norm(beta_md - beta_md_old, ord=2) # restarting\n",
     "            converged = (np.linalg.norm(beta_md - beta_md_old, ord=np.infty) < tol)\n",
-    "            smooth_grad = _SNP_update_smooth_grad_MCP_logistic(N=N, SNP_ind=SNP_ind, bed=bed, beta_md=beta_md, y=y, outcome_iid=outcome_iid, _lambda=_lambda, gamma=gamma)\n",
+    "            smooth_grad = _SNP_update_smooth_grad_MCP_logistic_parallel(N=N, SNP_ind=SNP_ind, bed=bed, beta_md=beta_md, y=y, outcome_iid=outcome_iid, _lambda=_lambda, gamma=gamma, chunck_size=chunck_size)\n",
     "            beta = soft_thresholding(x=beta - opt_lambda*smooth_grad, lambda_=opt_lambda*_lambda)\n",
     "            beta_ag = soft_thresholding(x=beta_md - opt_beta*smooth_grad, lambda_=opt_beta*_lambda)\n",
     "#             converged = np.all(np.max(np.abs(beta_md - beta_ag)/opt_beta) < tol).item()\n",
@@ -317,7 +348,7 @@
     "\n",
     "\n",
     "# @jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
-    "def SNP_solution_path_logistic(bed_file, bim_file, fam_file, outcome, outcome_iid, lambda_, L_convex, SNP_ind, beta_0 = np.ones(1), tol=1e-2, maxit=500, penalty=\"SCAD\", a=3.7, gamma=2.):\n",
+    "def SNP_solution_path_logistic_parallel(bed_file, bim_file, fam_file, outcome, outcome_iid, lambda_, L_convex, SNP_ind, beta_0 = np.ones(1), tol=1e-2, maxit=500, penalty=\"SCAD\", a=3.7, gamma=2., chunck_size=50000):\n",
     "    '''\n",
     "    Carry out the optimization for the solution path without the strong rule.\n",
     "    '''\n",
@@ -325,7 +356,7 @@
     "    p = len(list(bed.sid))\n",
     "    beta_mat = np.zeros((len(lambda_)+1, p))\n",
     "    for j in range(len(lambda_)): \n",
-    "        beta_mat[j+1,:] = SNP_UAG_logistic_SCAD_MCP(bed_file=bed_file, bim_file=bim_file, fam_file=fam_file, outcome=outcome, SNP_ind=SNP_ind, L_convex=L_convex, beta_0 = beta_mat[j,:], tol=tol, maxit=maxit, _lambda=lambda_[j], penalty=penalty, outcome_iid=outcome_iid, a=a, gamma=gamma)[1]\n",
+    "        beta_mat[j+1,:] = SNP_UAG_logistic_SCAD_MCP_parallel(bed_file=bed_file, bim_file=bim_file, fam_file=fam_file, outcome=outcome, SNP_ind=SNP_ind, L_convex=L_convex, beta_0 = beta_mat[j,:], tol=tol, maxit=maxit, _lambda=lambda_[j], penalty=penalty, outcome_iid=outcome_iid, a=a, gamma=gamma, chunck_size=chunck_size)[1]\n",
     "    return beta_mat[1:,:]\n",
     "\n"
    ]
@@ -365,15 +396,15 @@
     "SNP_ind = np.arange(300)\n",
     "\n",
     "print(SNP_solution_path_logistic(bed_file=bed_file, \n",
-    "                    bim_file=bim_file, \n",
-    "                    fam_file=fam_file, \n",
-    "                    outcome=outcome, \n",
-    "                    outcome_iid=outcome_iid, \n",
-    "                    lambda_=np.linspace(.005,.05,60)[::-1],\n",
-    "                    SNP_ind=SNP_ind, \n",
-    "                    L_convex=1e-2, \n",
-    "                    beta_0 = np.ones(1),\n",
-    "                    tol=1e-2, maxit=500, penalty=\"SCAD\", a=3.7, gamma=2.))\n",
+    "                                bim_file=bim_file, \n",
+    "                                fam_file=fam_file, \n",
+    "                                outcome=outcome, \n",
+    "                                outcome_iid=outcome_iid, \n",
+    "                                lambda_=np.linspace(.005,.05,60)[::-1],\n",
+    "                                SNP_ind=SNP_ind, \n",
+    "                                L_convex=1e-2, \n",
+    "                                beta_0 = np.ones(1),\n",
+    "                                tol=1e-2, maxit=500, penalty=\"SCAD\", a=3.7, gamma=2.))\n",
     "\n",
     "\n"
    ]
