--- a/logistic_SCAD_MCP_np_MODULE-SNP_parallel.ipynb
+++ b/logistic_SCAD_MCP_np_MODULE-SNP_parallel.ipynb
@@ -12,11 +12,23 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-18T17:45:19.033779Z",
-     "start_time": "2022-07-18T17:45:17.825566Z"
+     "end_time": "2022-07-20T19:12:07.634318Z",
+     "start_time": "2022-07-20T19:12:07.426364Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'bed_reader'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [2]\u001b[0m, in \u001b[0;36m<cell line: 14>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# import matplotlib.markers as markers\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# import matplotlib.pyplot as plt\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m# import timeit\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;66;03m# import cProfile\u001b[39;00m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;66;03m# import itertools\u001b[39;00m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mnumba\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m jit, njit\n\u001b[0;32m---> 14\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mbed_reader\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m open_bed\n\u001b[1;32m     15\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmultiprocess\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mmp\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'bed_reader'"
+     ]
+    }
+   ],
    "source": [
     "# import os, sys\n",
     "# import collections\n",
@@ -53,8 +65,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-18T17:45:19.474715Z",
-     "start_time": "2022-07-18T17:45:19.036269Z"
+     "end_time": "2022-07-20T19:12:07.970226Z",
+     "start_time": "2022-07-20T19:12:07.699870Z"
     }
    },
    "outputs": [],
@@ -174,8 +186,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-20T19:12:10.671298Z",
+     "start_time": "2022-07-20T19:12:10.652337Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# @jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
@@ -395,16 +412,16 @@
     "p = len(bed1.sid)\n",
     "SNP_ind = np.arange(300)\n",
     "\n",
-    "print(SNP_solution_path_logistic(bed_file=bed_file, \n",
-    "                                bim_file=bim_file, \n",
-    "                                fam_file=fam_file, \n",
-    "                                outcome=outcome, \n",
-    "                                outcome_iid=outcome_iid, \n",
-    "                                lambda_=np.linspace(.005,.05,60)[::-1],\n",
-    "                                SNP_ind=SNP_ind, \n",
-    "                                L_convex=1e-2, \n",
-    "                                beta_0 = np.ones(1),\n",
-    "                                tol=1e-2, maxit=500, penalty=\"SCAD\", a=3.7, gamma=2.))\n",
+    "print(SNP_solution_path_logistic_parallel(bed_file=bed_file, \n",
+    "                                        bim_file=bim_file, \n",
+    "                                        fam_file=fam_file, \n",
+    "                                        outcome=outcome, \n",
+    "                                        outcome_iid=outcome_iid, \n",
+    "                                        lambda_=np.linspace(.005,.05,60)[::-1],\n",
+    "                                        SNP_ind=SNP_ind, \n",
+    "                                        L_convex=1e2/N, \n",
+    "                                        beta_0 = np.ones(1),\n",
+    "                                        tol=1e-2, maxit=500, penalty=\"SCAD\", a=3.7, gamma=2.))\n",
     "\n",
     "\n"
    ]
