--- a/LM_SCAD_MCP_np_MODULE-SNP.ipynb
+++ b/LM_SCAD_MCP_np_MODULE-SNP.ipynb
@@ -9,11 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-20T21:53:42.351222Z",
-     "start_time": "2022-07-20T21:53:41.972578Z"
+     "end_time": "2022-07-21T03:08:48.952417Z",
+     "start_time": "2022-07-21T03:08:48.942310Z"
     }
    },
    "outputs": [],
@@ -195,7 +195,8 @@
     "    for j in SNP_ind:\n",
     "        _X = bed.read(_np.s_[:,j], dtype=_np.int8).flatten()\n",
     "        _X = _X[gene_ind] # get gene iid also in outcome iid\n",
-    "        _ += _X*beta_md[j]\n",
+    "        _ += _X*beta_md[j+1] # +1 because intercept\n",
+    "    _ += beta_md[0] # add the intercept\n",
     "    _ -= _y\n",
     "    # then calculate _XTXbeta = X.T@X@beta_md = X.T@_\n",
     "    _XTXbeta = _np.zeros(p)\n",
@@ -203,6 +204,7 @@
     "        _X = bed.read(_np.s_[:,j], dtype=_np.int8).flatten()\n",
     "        _X = _X[gene_ind] # get gene iid also in outcome iid\n",
     "        _XTXbeta[j] = _X@_\n",
+    "    _XTXbeta = _np.hstack((_np.array([np.sum(_)]),_XTXbeta))\n",
     "    del _\n",
     "    return 1/N*_XTXbeta\n",
     "\n",
@@ -257,10 +259,11 @@
     "            _X = _X[gene_ind] # get gene iid also in outcome iid\n",
     "            _[j] = _X@_y\n",
     "        beta = _np.sign(_)\n",
+    "        beta = _np.hstack((np.array([0]), beta))\n",
     "    else:\n",
     "        beta = beta_0\n",
     "    # passing other parameters\n",
-    "    smooth_grad = _np.ones(p)\n",
+    "    smooth_grad = _np.ones(p+1)\n",
     "    beta_ag = beta.copy()\n",
     "    beta_md = beta.copy()\n",
     "    k = 0\n",
@@ -324,7 +327,7 @@
     "    '''\n",
     "    bed = _open_bed(filepath=bed_file, fam_filepath=fam_file, bim_filepath=bim_file)\n",
     "    p = len(list(bed.sid))\n",
-    "    beta_mat = _np.zeros((len(lambda_)+1, p))\n",
+    "    beta_mat = _np.zeros((len(lambda_)+1, p+1))\n",
     "    for j in range(len(lambda_)): \n",
     "        beta_mat[j+1,:] = SNP_UAG_LM_SCAD_MCP(bed_file=bed_file, bim_file=bim_file, fam_file=fam_file, outcome=outcome, SNP_ind=SNP_ind, L_convex=L_convex, beta_0 = beta_mat[j,:], tol=tol, maxit=maxit, _lambda=lambda_[j], penalty=penalty, outcome_iid=outcome_iid, a=a, gamma=gamma)[1]\n",
     "    return beta_mat[1:,:]\n",
@@ -375,7 +378,7 @@
     "                            fam_file=fam_file, \n",
     "                            outcome=outcome, \n",
     "                            outcome_iid=outcome_iid, \n",
-    "                            lambda_=np.linspace(.005,.5,60)[::-1],\n",
+    "                            lambda_=np.linspace(.005,.5,20)[::-1],\n",
     "                            SNP_ind=SNP_ind, \n",
     "                            L_convex=1e-2, \n",
     "                            beta_0 = np.ones(1),\n",
