--- a/logistic_SCAD_MCP_np_MODULE-SNP_parallel.ipynb
+++ b/logistic_SCAD_MCP_np_MODULE-SNP_parallel.ipynb
@@ -207,6 +207,7 @@
     "    with _mp.Pool(_mp.cpu_count()) as pl:\n",
     "        _ = pl.map(__parallel_plus, _np.array_split(SNP_ind, n_slices))\n",
     "    _ = _np.array(_).sum(0)\n",
+    "    _ += beta_md[0] # add the intercept\n",
     "    _ = _np.tanh(_/2.)/2.-_y+.5\n",
     "    # then calculate _XTXbeta = X.T@X@beta_md = X.T@_\n",
     "    def __parallel_assign(_ind):\n",
@@ -224,13 +225,12 @@
     "    with _mp.Pool(_mp.cpu_count()) as pl:\n",
     "        _XTXbeta = pl.map(__parallel_assign, _np.array_split(SNP_ind, n_slices))\n",
     "    __XTXbeta = _np.hstack(_XTXbeta)\n",
-    "    _XTXbeta = _np.zeros(p)\n",
-    "    _XTXbeta[SNP_ind] = __XTXbeta\n",
-    "    \n",
+    "    _XTXbeta = _np.zeros(p+1)\n",
+    "    _XTXbeta[SNP_ind+1] = __XTXbeta\n",
+    "    _XTXbeta[0] = [_np.sum(_)]\n",
     "    del _\n",
     "    del __XTXbeta\n",
-    "\n",
-    "    return 1/N*_XTXbeta\n",
+    "    return _XTXbeta/(2.*N)\n",
     "\n",
     "# @_jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
     "def _SNP_update_smooth_grad_SCAD_logistic_parallel(N, SNP_ind, bed, beta_md, y, outcome_iid, _lambda, a, chunck_size):\n",
@@ -291,12 +291,12 @@
     "        with _mp.Pool(_mp.cpu_count()) as pl:\n",
     "            _XTy = pl.map(__parallel_assign, _np.array_split(SNP_ind, n_slices))\n",
     "        _XTy = _np.hstack(_XTy)\n",
-    "        beta = _np.zeros(p)\n",
-    "        beta[SNP_ind] = _np.sign(_XTy)\n",
+    "        beta = _np.zeros(p+1)\n",
+    "        beta[SNP_ind+1] = _np.sign(_XTy)\n",
     "    else:\n",
     "        beta = beta_0\n",
     "    # passing other parameters\n",
-    "    smooth_grad = _np.ones(p)\n",
+    "    smooth_grad = _np.ones(p+1)\n",
     "    beta_ag = beta.copy()\n",
     "    beta_md = beta.copy()\n",
     "    k = 0\n",
@@ -360,7 +360,7 @@
     "    '''\n",
     "    bed = _open_bed(filepath=bed_file, fam_filepath=fam_file, bim_filepath=bim_file)\n",
     "    p = len(list(bed.sid))\n",
-    "    beta_mat = _np.zeros((len(lambda_)+1, p))\n",
+    "    beta_mat = _np.zeros((len(lambda_)+1, p+1))\n",
     "    for j in range(len(lambda_)): \n",
     "        beta_mat[j+1,:] = SNP_UAG_logistic_SCAD_MCP_parallel(bed_file=bed_file, bim_file=bim_file, fam_file=fam_file, outcome=outcome, SNP_ind=SNP_ind, L_convex=L_convex, beta_0 = beta_mat[j,:], tol=tol, maxit=maxit, _lambda=lambda_[j], penalty=penalty, outcome_iid=outcome_iid, a=a, gamma=gamma, chunck_size=chunck_size)[1]\n",
     "    return beta_mat[1:,:]\n",
@@ -413,7 +413,7 @@
     "                                        fam_file=fam_file, \n",
     "                                        outcome=outcome, \n",
     "                                        outcome_iid=outcome_iid, \n",
-    "                                        lambda_=np.linspace(.005,.05,60)[::-1],\n",
+    "                                        lambda_=np.linspace(.005,.05,20)[::-1],\n",
     "                                        SNP_ind=SNP_ind, \n",
     "                                        L_convex=1e2/N, \n",
     "                                        beta_0 = np.ones(1),\n",
