--- a/LM_SCAD_MCP_np_MODULE-SNP_parallel.ipynb
+++ b/LM_SCAD_MCP_np_MODULE-SNP_parallel.ipynb
@@ -199,13 +199,14 @@
     "        for j in _ind:\n",
     "            _X = bed.read(_np.s_[:,j], dtype=_np.int8).flatten()\n",
     "            _X = _X[gene_ind] # get gene iid also in outcome iid\n",
-    "            __ += _X*beta_md[j]\n",
+    "            __ += _X*beta_md[j+1]\n",
     "        return __\n",
     "    # multiprocessing starts here\n",
     "    n_slices = _np.ceil(len(SNP_ind)/chunck_size)\n",
     "    with _mp.Pool(_mp.cpu_count()) as pl:\n",
     "        _ = pl.map(__parallel_plus, _np.array_split(SNP_ind, n_slices))\n",
     "    _ = _np.array(_).sum(0)\n",
+    "    _ += beta_md[0] # add the intercept\n",
     "    _ -= _y\n",
     "    # then calculate _XTXbeta = X.T@X@beta_md = X.T@_\n",
     "    def __parallel_assign(_ind):\n",
@@ -223,9 +224,9 @@
     "    with _mp.Pool(_mp.cpu_count()) as pl:\n",
     "        _XTXbeta = pl.map(__parallel_assign, _np.array_split(SNP_ind, n_slices))\n",
     "    __XTXbeta = _np.hstack(_XTXbeta)\n",
-    "    _XTXbeta = _np.zeros(p)\n",
-    "    _XTXbeta[SNP_ind] = __XTXbeta\n",
-    "    \n",
+    "    _XTXbeta = _np.zeros(p+1)\n",
+    "    _XTXbeta[SNP_ind+1] = __XTXbeta\n",
+    "    _XTXbeta[0] = [_np.sum(_)]\n",
     "    del _\n",
     "    del __XTXbeta\n",
     "\n",
@@ -290,12 +291,12 @@
     "        with _mp.Pool(_mp.cpu_count()) as pl:\n",
     "            _XTy = pl.map(__parallel_assign, _np.array_split(SNP_ind, n_slices))\n",
     "        _XTy = _np.hstack(_XTy)\n",
-    "        beta = _np.zeros(p)\n",
-    "        beta[SNP_ind] = _np.sign(_XTy)\n",
+    "        beta = _np.zeros(p+1)\n",
+    "        beta[SNP_ind+1] = _np.sign(_XTy)\n",
     "    else:\n",
     "        beta = beta_0\n",
     "    # passing other parameters\n",
-    "    smooth_grad = _np.ones(p)\n",
+    "    smooth_grad = _np.ones(p+1)\n",
     "    beta_ag = beta.copy()\n",
     "    beta_md = beta.copy()\n",
     "    k = 0\n",
@@ -359,7 +360,7 @@
     "    '''\n",
     "    bed = _open_bed(filepath=bed_file, fam_filepath=fam_file, bim_filepath=bim_file)\n",
     "    p = len(list(bed.sid))\n",
-    "    beta_mat = _np.zeros((len(lambda_)+1, p))\n",
+    "    beta_mat = _np.zeros((len(lambda_)+1, p+1))\n",
     "    for j in range(len(lambda_)): \n",
     "        beta_mat[j+1,:] = SNP_UAG_LM_SCAD_MCP_parallel(bed_file=bed_file, bim_file=bim_file, fam_file=fam_file, outcome=outcome, SNP_ind=SNP_ind, L_convex=L_convex, beta_0 = beta_mat[j,:], tol=tol, maxit=maxit, _lambda=lambda_[j], penalty=penalty, outcome_iid=outcome_iid, a=a, gamma=gamma, chunck_size=chunck_size)[1]\n",
     "    return beta_mat[1:,:]\n",
@@ -410,7 +411,7 @@
     "                                    fam_file=fam_file, \n",
     "                                    outcome=outcome, \n",
     "                                    outcome_iid=outcome_iid, \n",
-    "                                    lambda_=np.linspace(.005,.5,60)[::-1],\n",
+    "                                    lambda_=np.linspace(.005,.5,20)[::-1],\n",
     "                                    SNP_ind=SNP_ind, \n",
     "                                    L_convex=1e3, \n",
     "                                    beta_0 = np.ones(1),\n",
