--- a/logistic_SCAD_MCP_np_MODULE-SNP_parallel.ipynb
+++ b/logistic_SCAD_MCP_np_MODULE-SNP_parallel.ipynb
@@ -200,7 +200,7 @@
     "        for j in _ind:\n",
     "            _X = bed.read(_np.s_[:,j], dtype=_np.int8).flatten()\n",
     "            _X = _X[gene_ind] # get gene iid also in outcome iid\n",
-    "            __ += _X*beta_md[j]\n",
+    "            __ += _X*beta_md[j+1]\n",
     "        return __\n",
     "    # multiprocessing starts here\n",
     "    n_slices = _np.ceil(len(SNP_ind)/chunck_size)\n",
